<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/sendFragment"
        android:icon="@drawable/ic_send"
        android:title="@string/nav_send" />

    <item
        android:id="@+id/receiveFragment"
        android:icon="@drawable/ic_receive"
        android:title="@string/nav_receive" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
